--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-listman.com
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>listman.com</title>
+  </head>
+  <body>
+    listman.com
+  </body>
+</html>
