--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="/style.css" rel="stylesheet">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-M3H6NPVQEG"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-M3H6NPVQEG');
+    </script>
   </head>
   <body>
     <div id="app"><div class="container"><header><nav class="navbar navbar-expand-lg navbar-light bg-light"><div class="container-fluid"><a aria-current="page" href="/" class="router-link-active router-link-exact-active navbar-brand"> Listman </a></div></nav></header><main><div class="card mt-3"><div class="card-body"><a href="/s/ebay-listing-software.html" class=""> eBay Listing Software </a></div></div><div class="card mt-3"><div class="card-body"><a href="/s/amazon-listing-software.html" class=""> Amazon Listing Software </a></div></div><div class="card mt-3"><div class="card-body"><a href="/s/etsy-listing-software.html" class=""> Etsy Listing Software </a></div></div></main><footer><nav class="navbar navbar-expand-lg navbar-light bg-light mt-5"><div class="container-fluid"> listman.com </div></nav></footer></div></div>
