--- a/s/amazon-listing-software.html
+++ b/s/amazon-listing-software.html
@@ -6,6 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="/style.css" rel="stylesheet">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-M3H6NPVQEG"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-M3H6NPVQEG');
+    </script>
   </head>
   <body>
     <div id="app"><div class="container"><header><nav class="navbar navbar-expand-lg navbar-light bg-light"><div class="container-fluid"><a href="/" class="navbar-brand"> Listman </a></div></nav></header><main><!--[--><div class="card mt-3"><div class="card-body"><h5 class="card-title">Amazon PPC Basics: Getting Started With Amazon Sponsored Products</h5><h6 class="card-subtitle mb-2 text-muted">Fri, 11 Sep 2020 14:21:43 +0000</h6><div class="card-text"><p>Guest post by Luke from Ad Badger Amazon advertising is the best platform for anyone trying to sell a product. Don’t believe me? Let’s take a look at the numbers. In 2019, over $229 billion worth of merchandise was sold on Amazon, equating to almost half of all ecommerce sales in the United States. What’s</p>
