--- a/s/etsy-listing-software.html
+++ b/s/etsy-listing-software.html
@@ -6,6 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="/style.css" rel="stylesheet">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-M3H6NPVQEG"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-M3H6NPVQEG');
+    </script>
   </head>
   <body>
     <div id="app"><div class="container"><header><nav class="navbar navbar-expand-lg navbar-light bg-light"><div class="container-fluid"><a href="/" class="navbar-brand"> Listman </a></div></nav></header><main><!--[--><div class="card mt-3"><div class="card-body"><h5 class="card-title">How To Sell On Etsy: The Ultimate Beginner’s Guide To Etsy Success</h5><h6 class="card-subtitle mb-2 text-muted">Sun, 08 Sep 2019 11:34:34 +0000</h6><div class="card-text"><p>The post <a rel="nofollow" href="https://crazylister.com/blog/how-to-sell-on-etsy-ultimate-guide/">How To Sell On Etsy: The Ultimate Beginner&#8217;s Guide To Etsy Success</a> appeared first on <a rel="nofollow" href="https://crazylister.com">eBay Sellers Journey to $100,000 a Month</a>.</p>
