--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
   </head>
   <body>
     <div id="app"><div class="container"><header><nav class="navbar navbar-expand-lg navbar-light bg-light"><div class="container-fluid"><a aria-current="page" href="/" class="router-link-active router-link-exact-active navbar-brand"> Listman </a></div></nav></header><main><div class="card mt-3"><div class="card-body"><a href="/s/ebay-listing-software.html" class=""> eBay Listing Software </a></div></div><div class="card mt-3"><div class="card-body"><a href="/s/amazon-listing-software.html" class=""> Amazon Listing Software </a></div></div><div class="card mt-3"><div class="card-body"><a href="/s/etsy-listing-software.html" class=""> Etsy Listing Software </a></div></div></main><footer><nav class="navbar navbar-expand-lg navbar-light bg-light mt-5"><div class="container-fluid"> listman.com </div></nav></footer></div></div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+    <script src="/lib/bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
